[gd_scene load_steps=2 format=3 uid="uid://bi8gpnhl80s4a"]

[ext_resource type="Script" path="res://IO/filedialogue_quick.gd" id="1_vgqv4"]

[node name="QuickSave" type="Popup"]
title = "hello"
position = Vector2i(250, 250)
size = Vector2i(800, 500)
visible = true
wrap_controls = false
borderless = false
script = ExtResource("1_vgqv4")

[node name="Panel" type="PanelContainer" parent="."]
offset_right = 771.0
offset_bottom = 163.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
offset_right = 771.0
offset_bottom = 163.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 751.0
offset_bottom = 143.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
offset_right = 731.0
offset_bottom = 66.0
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
offset_right = 230.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 45
text = "File Name:"

[node name="Input_File" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
offset_left = 243.0
offset_right = 643.0
offset_bottom = 66.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
placeholder_text = "File Name"

[node name="Input_Submit" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 656.0
offset_right = 731.0
offset_bottom = 66.0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Input_CreateFolders" type="CheckButton" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_left = 106.0
offset_top = 70.0
offset_right = 625.0
offset_bottom = 123.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "Create New Folders as Needed"
